--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: heroku
+      url: https://goneo.herokuapp.com/graphviz
     steps:
       - name: Checkout
         uses: actions/checkout@v2
