--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,12 +12,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+      - uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.20'
+          go-version-file: 'go.mod'
 
       - name: Build
         run: go build -v ./...
@@ -27,5 +27,5 @@ jobs:
 
       - uses: dominikh/staticcheck-action@v1.3.1
         with:
-          version: "2023.1.3"
+          version: "2023.1.7"
           install-go: false
